recallable/tests/ui/model_fail_manual_serde_alias.rs
use recallable::recallable_model;

#[recallable_model]
#[derive(Clone, Debug)]
struct Foo {
    #[serde(alias = "old")]
    value: i32,
}

fn main() {}
